VM/Sources/AntlrNya/lib/VMParser.swift
// Generated from ./VMParser.g4 by ANTLR 4.13.2
import Antlr4

open class VMParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = VMParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(VMParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, LAPREN = 1, RPAREN = 2, ADD = 3, RESTA = 4, MUL = 5, DIV = 6, 
                 LESS = 7, GREATER = 8, EQUAL = 9, NEQ = 10, EQEQ = 11, 
                 COMMA = 12, SEMI = 13, LBRACKET = 14, RBRACKET = 15, LINE_COMMENT = 16, 
                 START_BLOCK = 17, END_BLOCK = 18, STRING = 19, COMMENT = 20, 
                 IMPORT = 21, FUNC = 22, FOR = 23, WHILE = 24, DESDE = 25, 
                 HASTA = 26, EN = 27, COND = 28, ID = 29, NUM = 30, BOOL = 31, 
                 NADA = 32, RETURN = 33, WS = 34
	}

	public
	static let RULE_program = 0, RULE_stat = 1, RULE_expr = 2, RULE_array = 3, 
            RULE_variable = 4, RULE_funcParams = 5, RULE_funcDef = 6, RULE_funcArgs = 7, 
            RULE_funcCall = 8, RULE_iterar = 9, RULE_condicion = 10

	public
	static let ruleNames: [String] = [
		"program", "stat", "expr", "array", "variable", "funcParams", "funcDef", 
		"funcArgs", "funcCall", "iterar", "condicion"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'='", "'!='", 
		"'=='", "','", "';'", "'['", "']'", nil, "'{'", "'}'", nil, nil, "'importar'", 
		"'funcion'", "'iterar'", "'mientras'", "'desde'", "'hasta'", "'en'", nil, 
		nil, nil, nil, "'NADA'", "'retornar'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "LAPREN", "RPAREN", "ADD", "RESTA", "MUL", "DIV", "LESS", "GREATER", 
		"EQUAL", "NEQ", "EQEQ", "COMMA", "SEMI", "LBRACKET", "RBRACKET", "LINE_COMMENT", 
		"START_BLOCK", "END_BLOCK", "STRING", "COMMENT", "IMPORT", "FUNC", "FOR", 
		"WHILE", "DESDE", "HASTA", "EN", "COND", "ID", "NUM", "BOOL", "NADA", 
		"RETURN", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "VMParser.g4" }

	override open
	func getRuleNames() -> [String] { return VMParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return VMParser._serializedATN }

	override open
	func getATN() -> ATN { return VMParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return VMParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,VMParser._ATN,VMParser._decisionToDFA, VMParser._sharedContextCache)
	}


	public class ProgramContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(VMParser.Tokens.EOF.rawValue, 0)
			}
			open
			func stat() -> [StatContext] {
				return getRuleContexts(StatContext.self)
			}
			open
			func stat(_ i: Int) -> StatContext? {
				return getRuleContext(StatContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return VMParser.RULE_program
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitProgram(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitProgram(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext
		_localctx = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 0, VMParser.RULE_program)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(25)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 4207427586) != 0)) {
		 		setState(22)
		 		try stat()


		 		setState(27)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(28)
		 	try match(VMParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class StatContext: ParserRuleContext {
			open
			func variable() -> VariableContext? {
				return getRuleContext(VariableContext.self, 0)
			}
			open
			func SEMI() -> TerminalNode? {
				return getToken(VMParser.Tokens.SEMI.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func funcDef() -> FuncDefContext? {
				return getRuleContext(FuncDefContext.self, 0)
			}
			open
			func iterar() -> IterarContext? {
				return getRuleContext(IterarContext.self, 0)
			}
			open
			func END_BLOCK() -> TerminalNode? {
				return getToken(VMParser.Tokens.END_BLOCK.rawValue, 0)
			}
			open
			func condicion() -> CondicionContext? {
				return getRuleContext(CondicionContext.self, 0)
			}
			open
			func array() -> ArrayContext? {
				return getRuleContext(ArrayContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return VMParser.RULE_stat
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitStat(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitStat(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func stat() throws -> StatContext {
		var _localctx: StatContext
		_localctx = StatContext(_ctx, getState())
		try enterRule(_localctx, 2, VMParser.RULE_stat)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(46)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,1, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(30)
		 		try variable()
		 		setState(31)
		 		try match(VMParser.Tokens.SEMI.rawValue)

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(33)
		 		try expr(0)
		 		setState(34)
		 		try match(VMParser.Tokens.SEMI.rawValue)

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(36)
		 		try funcDef()

		 		break
		 	case 4:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(37)
		 		try iterar()
		 		setState(38)
		 		try match(VMParser.Tokens.END_BLOCK.rawValue)

		 		break
		 	case 5:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(40)
		 		try condicion()
		 		setState(41)
		 		try match(VMParser.Tokens.END_BLOCK.rawValue)

		 		break
		 	case 6:
		 		try enterOuterAlt(_localctx, 6)
		 		setState(43)
		 		try array()
		 		setState(44)
		 		try match(VMParser.Tokens.SEMI.rawValue)

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class ExprContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return VMParser.RULE_expr
		}
	}
	public class NumberContext: ExprContext {
			open
			func NUM() -> TerminalNode? {
				return getToken(VMParser.Tokens.NUM.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitNumber(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitNumber(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class EqExpContext: ExprContext {
		public var op: Token!
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func EQUAL() -> TerminalNode? {
				return getToken(VMParser.Tokens.EQUAL.rawValue, 0)
			}
			open
			func LESS() -> TerminalNode? {
				return getToken(VMParser.Tokens.LESS.rawValue, 0)
			}
			open
			func GREATER() -> TerminalNode? {
				return getToken(VMParser.Tokens.GREATER.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitEqExp(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitEqExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class BooleanContext: ExprContext {
			open
			func BOOL() -> TerminalNode? {
				return getToken(VMParser.Tokens.BOOL.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitBoolean(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitBoolean(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class AritExpContext: ExprContext {
		public var op: Token!
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func MUL() -> TerminalNode? {
				return getToken(VMParser.Tokens.MUL.rawValue, 0)
			}
			open
			func DIV() -> TerminalNode? {
				return getToken(VMParser.Tokens.DIV.rawValue, 0)
			}
			open
			func ADD() -> TerminalNode? {
				return getToken(VMParser.Tokens.ADD.rawValue, 0)
			}
			open
			func RESTA() -> TerminalNode? {
				return getToken(VMParser.Tokens.RESTA.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitAritExp(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitAritExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class StringContext: ExprContext {
			open
			func STRING() -> TerminalNode? {
				return getToken(VMParser.Tokens.STRING.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitString(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitString(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ParenExpContext: ExprContext {
			open
			func LAPREN() -> TerminalNode? {
				return getToken(VMParser.Tokens.LAPREN.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
			open
			func RPAREN() -> TerminalNode? {
				return getToken(VMParser.Tokens.RPAREN.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitParenExp(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitParenExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class FCallContext: ExprContext {
			open
			func funcCall() -> FuncCallContext? {
				return getRuleContext(FuncCallContext.self, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitFCall(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitFCall(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class IdContext: ExprContext {
			open
			func ID() -> TerminalNode? {
				return getToken(VMParser.Tokens.ID.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitId(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitId(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class NeqExpContext: ExprContext {
		public var op: Token!
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func NEQ() -> TerminalNode? {
				return getToken(VMParser.Tokens.NEQ.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitNeqExp(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitNeqExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ArregloContext: ExprContext {
			open
			func array() -> ArrayContext? {
				return getRuleContext(ArrayContext.self, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitArreglo(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitArreglo(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class EqEqExpContext: ExprContext {
		public var op: Token!
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func EQEQ() -> TerminalNode? {
				return getToken(VMParser.Tokens.EQEQ.rawValue, 0)
			}

		public
		init(_ ctx: ExprContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitEqEqExp(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitEqEqExp(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}

	 public final  func expr( ) throws -> ExprContext   {
		return try expr(0)
	}
	@discardableResult
	private func expr(_ _p: Int) throws -> ExprContext   {
		let _parentctx: ParserRuleContext? = _ctx
		let _parentState: Int = getState()
		var _localctx: ExprContext
		_localctx = ExprContext(_ctx, _parentState)
		var _prevctx: ExprContext = _localctx
		let _startState: Int = 4
		try enterRecursionRule(_localctx, 4, VMParser.RULE_expr, _p)
		var _la: Int = 0
		defer {
	    		try! unrollRecursionContexts(_parentctx)
	    }
		do {
			var _alt: Int
			try enterOuterAlt(_localctx, 1)
			setState(59)
			try _errHandler.sync(self)
			switch(try getInterpreter().adaptivePredict(_input,2, _ctx)) {
			case 1:
				_localctx = NumberContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx

				setState(49)
				try match(VMParser.Tokens.NUM.rawValue)

				break
			case 2:
				_localctx = BooleanContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(50)
				try match(VMParser.Tokens.BOOL.rawValue)

				break
			case 3:
				_localctx = StringContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(51)
				try match(VMParser.Tokens.STRING.rawValue)

				break
			case 4:
				_localctx = IdContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(52)
				try match(VMParser.Tokens.ID.rawValue)

				break
			case 5:
				_localctx = ParenExpContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(53)
				try match(VMParser.Tokens.LAPREN.rawValue)
				setState(54)
				try expr(0)
				setState(55)
				try match(VMParser.Tokens.RPAREN.rawValue)

				break
			case 6:
				_localctx = FCallContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(57)
				try funcCall()

				break
			case 7:
				_localctx = ArregloContext(_localctx)
				_ctx = _localctx
				_prevctx = _localctx
				setState(58)
				try array()

				break
			default: break
			}
			_ctx!.stop = try _input.LT(-1)
			setState(76)
			try _errHandler.sync(self)
			_alt = try getInterpreter().adaptivePredict(_input,4,_ctx)
			while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
				if ( _alt==1 ) {
					if _parseListeners != nil {
					   try triggerExitRuleEvent()
					}
					_prevctx = _localctx
					setState(74)
					try _errHandler.sync(self)
					switch(try getInterpreter().adaptivePredict(_input,3, _ctx)) {
					case 1:
						_localctx = AritExpContext(  ExprContext(_parentctx, _parentState))
						try pushNewRecursionContext(_localctx, _startState, VMParser.RULE_expr)
						setState(61)
						if (!(precpred(_ctx, 6))) {
						    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 6)"))
						}
						setState(62)
						_localctx.castdown(AritExpContext.self).op = try _input.LT(1)
						_la = try _input.LA(1)
						if (!(((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 120) != 0))) {
							_localctx.castdown(AritExpContext.self).op = try _errHandler.recoverInline(self) as Token
						}
						else {
							_errHandler.reportMatch(self)
							try consume()
						}
						setState(63)
						try expr(7)

						break
					case 2:
						_localctx = EqEqExpContext(  ExprContext(_parentctx, _parentState))
						try pushNewRecursionContext(_localctx, _startState, VMParser.RULE_expr)
						setState(64)
						if (!(precpred(_ctx, 5))) {
						    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 5)"))
						}
						setState(65)
						try {
								let assignmentValue = try match(VMParser.Tokens.EQEQ.rawValue)
								_localctx.castdown(EqEqExpContext.self).op = assignmentValue
						     }()

						setState(66)
						try expr(6)

						break
					case 3:
						_localctx = EqExpContext(  ExprContext(_parentctx, _parentState))
						try pushNewRecursionContext(_localctx, _startState, VMParser.RULE_expr)
						setState(67)
						if (!(precpred(_ctx, 4))) {
						    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 4)"))
						}
						setState(68)
						_localctx.castdown(EqExpContext.self).op = try _input.LT(1)
						_la = try _input.LA(1)
						if (!(_la == VMParser.Tokens.LESS.rawValue || _la == VMParser.Tokens.GREATER.rawValue)) {
							_localctx.castdown(EqExpContext.self).op = try _errHandler.recoverInline(self) as Token
						}
						else {
							_errHandler.reportMatch(self)
							try consume()
						}
						setState(69)
						try match(VMParser.Tokens.EQUAL.rawValue)
						setState(70)
						try expr(5)

						break
					case 4:
						_localctx = NeqExpContext(  ExprContext(_parentctx, _parentState))
						try pushNewRecursionContext(_localctx, _startState, VMParser.RULE_expr)
						setState(71)
						if (!(precpred(_ctx, 3))) {
						    throw ANTLRException.recognition(e:FailedPredicateException(self, "precpred(_ctx, 3)"))
						}
						setState(72)
						try {
								let assignmentValue = try match(VMParser.Tokens.NEQ.rawValue)
								_localctx.castdown(NeqExpContext.self).op = assignmentValue
						     }()

						setState(73)
						try expr(4)

						break
					default: break
					}
			 
				}
				setState(78)
				try _errHandler.sync(self)
				_alt = try getInterpreter().adaptivePredict(_input,4,_ctx)
			}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx;
	}

	public class ArrayContext: ParserRuleContext {
			open
			func LBRACKET() -> TerminalNode? {
				return getToken(VMParser.Tokens.LBRACKET.rawValue, 0)
			}
			open
			func RBRACKET() -> TerminalNode? {
				return getToken(VMParser.Tokens.RBRACKET.rawValue, 0)
			}
			open
			func expr() -> [ExprContext] {
				return getRuleContexts(ExprContext.self)
			}
			open
			func expr(_ i: Int) -> ExprContext? {
				return getRuleContext(ExprContext.self, i)
			}
			open
			func COMMA() -> [TerminalNode] {
				return getTokens(VMParser.Tokens.COMMA.rawValue)
			}
			open
			func COMMA(_ i:Int) -> TerminalNode? {
				return getToken(VMParser.Tokens.COMMA.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return VMParser.RULE_array
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitArray(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitArray(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func array() throws -> ArrayContext {
		var _localctx: ArrayContext
		_localctx = ArrayContext(_ctx, getState())
		try enterRule(_localctx, 6, VMParser.RULE_array)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(79)
		 	try match(VMParser.Tokens.LBRACKET.rawValue)
		 	setState(88)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 3758637058) != 0)) {
		 		setState(80)
		 		try expr(0)
		 		setState(85)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		while (_la == VMParser.Tokens.COMMA.rawValue) {
		 			setState(81)
		 			try match(VMParser.Tokens.COMMA.rawValue)
		 			setState(82)
		 			try expr(0)


		 			setState(87)
		 			try _errHandler.sync(self)
		 			_la = try _input.LA(1)
		 		}

		 	}

		 	setState(90)
		 	try match(VMParser.Tokens.RBRACKET.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VariableContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(VMParser.Tokens.ID.rawValue, 0)
			}
			open
			func EQUAL() -> TerminalNode? {
				return getToken(VMParser.Tokens.EQUAL.rawValue, 0)
			}
			open
			func expr() -> ExprContext? {
				return getRuleContext(ExprContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return VMParser.RULE_variable
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitVariable(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitVariable(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func variable() throws -> VariableContext {
		var _localctx: VariableContext
		_localctx = VariableContext(_ctx, getState())
		try enterRule(_localctx, 8, VMParser.RULE_variable)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(92)
		 	try match(VMParser.Tokens.ID.rawValue)
		 	setState(93)
		 	try match(VMParser.Tokens.EQUAL.rawValue)
		 	setState(94)
		 	try expr(0)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FuncParamsContext: ParserRuleContext {
			open
			func ID() -> [TerminalNode] {
				return getTokens(VMParser.Tokens.ID.rawValue)
			}
			open
			func ID(_ i:Int) -> TerminalNode? {
				return getToken(VMParser.Tokens.ID.rawValue, i)
			}
			open
			func COMMA() -> [TerminalNode] {
				return getTokens(VMParser.Tokens.COMMA.rawValue)
			}
			open
			func COMMA(_ i:Int) -> TerminalNode? {
				return getToken(VMParser.Tokens.COMMA.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return VMParser.RULE_funcParams
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? VMParserVisitor {
			    return visitor.visitFuncParams(self)
			}
			else if let visitor = visitor as? VMParserBaseVisitor {
			    return visitor.visitFuncParams(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func funcParams() throws -> FuncParamsContext {
		var _localctx: FuncParamsContext
		_localctx = FuncParamsContext(_ctx, getState())
		try enterRule(_localctx, 10, VMParser.RULE_funcParams)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(96)
		 	try match(VMParser.Tokens.ID.rawValue)
		 	setState(101)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (_la == VMParser.Tokens.COMMA.rawValue) {
		 		setState(97)
		 		try match(VMParser.Tokens.COMMA.rawValue)
		 		setState(98)
		 		try match(VMParser.Tokens.ID.rawValue)


		 		setState(103)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
